# simpit

./: .gitignore  .gitmodules  40-usb-goflight.rules  738_captain.json  738_cdu.json  FSW2018-briefing.docx  README.md  canvas_738_lower_EICAS.json  canvas_738_upper_EICAS.json  run_738_with_canvas.sh  run_canvas.sh  run_cdu_canvas.sh  run_fgfs.sh  run_launcher.sh  run_multiview.sh  sim-canvas.service  sim-cdu-canvas.service  sim-cdu-driver.service  sim-cdu-kms-config.json  sim-gpio.service  sim-lower-eicas-canvas.service  sim-pfd-nd-canvas.service  simpit-DUs.desktop  twoview.xml
simCDUDriver/: .gitignore  CDUKeys.cpp  CDUKeys.h  CMakeLists.txt  simCDUDriver  simCDUDriver.cpp
simGPIODriver/: .gitignore  Adafruit_PWMServoDriver.cpp  Adafruit_PWMServoDriver.h  CMakeLists.txt  FGFSTelnetSocket.cpp  FGFSTelnetSocket.h  GPIO.cpp  GPIO.h  LEDDriver.cpp  LEDDriver.h  dummy_IoPi.h  dummy_LEDDriver.cpp  ledTest.cpp  servoTest.cpp  sim-gpio  simGPIODriver  simGPIODriver.cpp
simpit-addon/: adapter_738.nas  addon-config.xml  addon-main.nas  addon-menubar-items.xml  addon-metadata.xml
